--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="bhoopathy.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Dhaarini.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Dhaarini K</h1>
             <h3><b>Full Stack Web Application Developer</b></h3>
         </div>
